# ThermalLoss

./: .gitignore  CMakeLists.txt
cmake/: XBundleHelper.cmake
doc/: README.building  README.materials
include/: property.h
shared/: default.materials  default.parameters  old_stone_house.building  sample.building
src/: CMakeLists.txt  app.cpp  calc.cpp  calc.h  heating.cpp  hydraulic.cpp  losses.cpp  losses.h  model.cpp  model.h
src/app/: CMakeLists.txt  solver.cpp
src/calc/: CMakeLists.txt  calc.cpp  calc.h
src/geom/: CMakeLists.txt  polygon.cpp  polygon.h  vertex.cpp  vertex.h
src/json/: CMakeLists.txt  json.cpp  json.h
src/lib/: CMakeLists.txt  named.cpp  named.h  persistent.h  report.cpp  report.h  reynolds.cpp  reynolds.h  solver.cpp  solver.h  spatial.h  thermal.cpp  thermal.h  utils.cpp  utils.h
src/model/: CMakeLists.txt  building.cpp  building.h  losses.h  material.cpp  material.h
